# MyConfig

./: .gitattributes  LICENSE  README.md  setup.sh  start  start.sh
.github/ISSUE_TEMPLATE/: feature_request.md
DNS/: head
extensions/PersianCalendar@oxygenws.com/: metadata.json
extensions/TeaTime@oleid.mescharet.de/: metadata.json
extensions/better-osd/: README.md  extension.js  metadata.json  prefs.js
extensions/desktop-folder@hebertjulio.com.br/: AUTHORS  README.md  extension.js  metadata.json
extensions/desktop-iconscsoriano.v17.shell-extension/: createFolderDialog.js  desktopGrid.js  desktopManager.js  fileItem.js  metadata.json
extensions/ding@rastersoft.com/: desktopIconsUtil.js  metadata.json
extensions/dynamic-panel-transparency@rockon999.github.io/: metadata.json
extensions/dynamicTopBar@gnomeshell.feildel.fr/: metadata.json
extensions/gnome-shell-trash-extension/: extension.js  metadata.json
extensions/gsconnect@andyholmes.github.io/: metadata.json  org.gnome.Shell.Extensions.GSConnect.gresource
extensions/hidetopbar@mathieu.bidon.ca/: metadata.json
extensions/move-osd-windows@maestroschan.fr/: extension.js  metadata.json  prefs.js
extensions/netspeed@hedayaty.gmail.com/: metadata.json
extensions/nightthemeswitcher@romainvigier.fr/: extension.js  metadata.json
extensions/org.gnome.desktop-icons-enhanced/: Clipboard_COPY  Clipboard_CUT  Clipboard_GET  README.md  extension.js  (+4 more)
extensions/org.gnome.desktop-icons-enhanced/clipboard/: CMakeLists.txt  clipboard_copy.c  clipboard_cut.c  clipboard_has_uris.c
mpv/: .mpv
tor/: torrc
(+77 files in other folders)
